versioned_docs/version-8.4/components/console/manage-organization/enable-alpha-features.md
---
id: enable-alpha-features
title: Enable alpha features
description: "Learn how admin users can manage access to alpha features in Console and Modeler. "
keywords: [alpha-features, alpha, admin, pre-release]
---

:::note
Opting-in to Camunda alpha terms currently only applies to Enterprise SaaS subscriptions. 
Customers in other subscriptions can still turn on/off these settings directly from Console.  
:::

If you aren't already familiar with accessing **alpha features**, learn more in our [alpha feature documentation](/reference/alpha-features.md).

Alpha terms typically refer to the specific terms and conditions that govern the use and testing of this software during its alpha phase. These terms outline the rights, responsibilities, and limitations of both the software provider (Camunda) and the users (alpha testers or early adopters) during the testing and evaluation period.

Alpha terms help protect Camunda´s interests (such as protecting our intellectual property, disclaiming warranties, or limiting our liability for any issues or damages that may arise during the alpha phase), manage user expectations, encourage active participation and feedback, and ensure legal compliance during the pre-release phase of software development.

:::note
Enabling alpha features is limited to [admin users and owners](/docs/components/console/manage-organization/manage-users.md) of Camunda products.
:::

## Accept alpha terms

To accept alpha terms for Camunda products, follow the steps below:

1. Log in to Camunda Console and click the **Organization** tab to view the overview for **Organization Management**.
2. Under the **Settings** tab, click **Opt-in** under the **Alpha features** box.
3. Note the **Alpha Terms** modal. As the admin accepting the alpha terms, you must scroll and read through the terms before accepting.
4. Once you have read the terms and scrolled through the modal, tick the box at the bottom reading **"I understand and agree to Alpha Terms"**.

The system will confirm your acceptance and send a copy of the accepted alpha terms to your email address.

## Manage alpha features

Once you accept the alpha terms, you can enable and disable any features you would like to use, and learn more about them:

- In the **Settings** tab, toggle the switch under **Status** to enable and disable the feature.
- Click **View docs** under **Documentation** to learn more about the feature.
- Admins can know when someone accepts the alpha terms and when features are enabled or disabled under the **Activity** tab in **Organization Management**.
